finished solution and added css

--- a/Lab11MVC/Lab11MVC/Lab11MVC.csproj
+++ b/Lab11MVC/Lab11MVC/Lab11MVC.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <None Include="wwwroot\personOfTheYear.csv" />
   </ItemGroup>
 
 </Project>
